--- a/sample.html
+++ b/sample.html
@@ -1,12 +1,12 @@
 <! DOCTYPE html>
-​ ​<html ​ ​lang = "​ ​ja​ ​"​ ​>
+​​ ​<html ​ ​lang = "​ fr ​"​ ​
 ​ ​<head>
     ​ ​<meta ​ ​charset = "​ ​UTF-8​ ​"​ ​>
-    ​ ​<meta ​ ​http-equiv = "​ ​Content-Type​ ​" ​ ​content = "​ ​text / html; charset = utf-8​ ​" ​ ​/>
-    ​ ​<title> Achieve </ title>
-    ​ ​<link ​ ​rel = "​ ​stylesheet​ ​" ​ ​href = "​ ​vendors / css / normalize.css​ ​"​ ​>
-    ​ ​<link ​ ​rel = "​ ​stylesheet​ ​" ​ ​href = "​ ​vendors / css / sample.css​ ​"​ ​>
-​ ​</ head>
+    ​ ​<meta ​ ​http-equiv = "​ ​Content-Type​ ​" ​ ​content = "​ ​text / html"  charset = utf-8​ ​" ​/>
+    ​ ​<title> Achieve </title>
+    ​ ​<link ​ ​rel = "​ ​stylesheet​ ​" ​ ​href = "​ ​css/normalize.css​ ​"​ ​>
+    ​ ​<link ​ ​rel = "​ ​stylesheet​ ​" ​ ​href = "​ ​css /sample.css​ ​"​ ​>
+​ ​</head>
 ​ ​<body>
   ​ ​<header>
     ​ ​<ul>
@@ -15,39 +15,39 @@
       ​ ​<li ​ ​class = "​ ​right​ ​"​ ​>​ ​<a ​ ​href = "​ ​#​ ​"​ ​> Sign up </a>​ ​</ li>
       ​ ​<li ​ ​class = "​ ​right​ ​"​ ​>​ ​<a ​ ​href = "​ ​#​ ​"​ ​> Login </a>​ ​</ li>
     ​ ​</ ul>
-  ​ ​</ header>
+  ​ ​</header>
   ​ ​<section ​ ​class = "​ ​main-header​ ​"​ ​>
-    ​ ​<img ​ ​src = "​ ​vendors / images / achieve.png​ ​"​ ​>
-  ​ ​</ section>
+    ​ ​<img ​ ​src = "​ images / achieve.png​ ​"​ ​>
+  ​ ​</section>
   ​ ​<section ​ ​class = "​ ​about​ ​"​ ​>
     ​ ​<h1> About Achieve </ h1>
-    ​ ​<p> Achieve is a teaching material page created for students. <br> By completing Achieve, you can pass the HTML task. </ p>
+    ​ ​<p> Achieve is a teaching material page created for students. <br> By completing Achieve, you can pass the HTML task.</p>
     ​ ​<p> In short, Acheive is a mockup of the top page of a task management application. <br> This page explains the function of the application that allows team members to know what task they are currently doing. </ p>
-  ​ ​</ section>
+  ​ ​</section>
   ​ ​<section ​ ​class = "​ ​function​ ​"​ ​>
     ​ ​<h1> Function </ h1>
     ​ ​<div ​ ​class = "​ ​function-images​ ​"​ ​>
       ​ ​<div ​ ​class = "​ ​function-image​ ​"​ ​>
-        ​ ​<img ​ ​src = "​ ​vendors / images / key.png​ ​"​ ​>
+        ​ ​<img ​ ​src = "​ ​images/key.png​ ​"​ ​>
         ​ ​<p> Login function </ p>
-      ​ ​</ div>
+      ​ ​</div>
       ​ ​<div ​ ​class = "​ ​function-image​ ​"​ ​>
-        ​ ​<img ​ ​src = "​ ​vendors / images / mails.png​ ​"​ ​>
+        ​ ​<img ​ ​src = "​ images/mails.png​ ​"​ ​>
         ​ ​<p> Email sending function </ p>
-      ​ ​</ div>
+      ​ ​</div>
       ​ ​<div ​ ​class = "​ ​function-image​ ​"​ ​>
-        ​ ​<img ​ ​src = "​ ​vendors / images / girls.png​ ​"​ ​>
+        ​ ​<img ​ ​src = "​ ​images/girls.png​ ​"​ ​>
         ​ ​<p> Friends connection function </ p>
-      ​ ​</ div>
+      ​ ​</div>
       ​ ​<div ​ ​class = "​ ​function-image​ ​"​ ​>
-        ​ ​<img ​ ​src = "​ ​vendors / images / comment.png​ ​"​ ​>
+        ​ ​<img ​ ​src = "​ ​images/comment.png​ ​"​ ​>
         ​ ​<p> Comment posting function </ p>
       ​ ​</ div>
-    ​ ​</ div>
-  ​ ​</ section>
+    ​ ​</div>
+  ​ ​</section>
   ​ ​<footer>
     ​ ​<p> Operating company DIVE INTO CODE Co., Ltd. </ p>
     ​ ​<p> © 2015-2018 Copyright DIVE INTO CODE Corp. </ p>
-  ​ ​</ footer>
-​ ​</ body>
-​ ​</ html>
+  ​ ​</footer>
+​ ​</body>
+​ ​</html>
