--- a/sample.html
+++ b/sample.html
@@ -1,53 +1,60 @@
-<! DOCTYPE html>
-​​ ​<html ​ ​lang = "​ fr ​"​ ​
-​ ​<head>
-    ​ ​<meta ​ ​charset = "​ ​UTF-8​ ​"​ ​>
-    ​ ​<meta ​ ​http-equiv = "​ ​Content-Type​ ​" ​ ​content = "​ ​text / html"  charset = utf-8​ ​" ​/>
-    ​ ​<title> Achieve </title>
-    ​ ​<link ​ ​rel = "​ ​stylesheet​ ​" ​ ​href = "​ ​css/normalize.css​ ​"​ ​>
-    ​ ​<link ​ ​rel = "​ ​stylesheet​ ​" ​ ​href = "​ ​css /sample.css​ ​"​ ​>
-​ ​</head>
-​ ​<body>
-  ​ ​<header>
-    ​ ​<ul>
-      ​ ​<li ​ ​class = "​ ​left​ ​"​ ​>​ ​<a ​ ​href = "​ ​#​ ​"​ ​> Achieve </a>​ ​</ li>
-      ​ ​<li ​ ​class = "​ ​left​ ​"​ ​>​ ​<a ​ ​href = "​ ​#​ ​"​ ​> Contact Us </a>​ ​</ li>
-      ​ ​<li ​ ​class = "​ ​right​ ​"​ ​>​ ​<a ​ ​href = "​ ​#​ ​"​ ​> Sign up </a>​ ​</ li>
-      ​ ​<li ​ ​class = "​ ​right​ ​"​ ​>​ ​<a ​ ​href = "​ ​#​ ​"​ ​> Login </a>​ ​</ li>
-    ​ ​</ ul>
-  ​ ​</header>
-  ​ ​<section ​ ​class = "​ ​main-header​ ​"​ ​>
-    ​ ​<img ​ ​src = "​ images / achieve.png​ ​"​ ​>
-  ​ ​</section>
-  ​ ​<section ​ ​class = "​ ​about​ ​"​ ​>
-    ​ ​<h1> About Achieve </ h1>
-    ​ ​<p> Achieve is a teaching material page created for students. <br> By completing Achieve, you can pass the HTML task.</p>
-    ​ ​<p> In short, Acheive is a mockup of the top page of a task management application. <br> This page explains the function of the application that allows team members to know what task they are currently doing. </ p>
-  ​ ​</section>
-  ​ ​<section ​ ​class = "​ ​function​ ​"​ ​>
-    ​ ​<h1> Function </ h1>
-    ​ ​<div ​ ​class = "​ ​function-images​ ​"​ ​>
-      ​ ​<div ​ ​class = "​ ​function-image​ ​"​ ​>
-        ​ ​<img ​ ​src = "​ ​images/key.png​ ​"​ ​>
-        ​ ​<p> Login function </ p>
-      ​ ​</div>
-      ​ ​<div ​ ​class = "​ ​function-image​ ​"​ ​>
-        ​ ​<img ​ ​src = "​ images/mails.png​ ​"​ ​>
-        ​ ​<p> Email sending function </ p>
-      ​ ​</div>
-      ​ ​<div ​ ​class = "​ ​function-image​ ​"​ ​>
-        ​ ​<img ​ ​src = "​ ​images/girls.png​ ​"​ ​>
-        ​ ​<p> Friends connection function </ p>
-      ​ ​</div>
-      ​ ​<div ​ ​class = "​ ​function-image​ ​"​ ​>
-        ​ ​<img ​ ​src = "​ ​images/comment.png​ ​"​ ​>
-        ​ ​<p> Comment posting function </ p>
-      ​ ​</ div>
-    ​ ​</div>
-  ​ ​</section>
-  ​ ​<footer>
-    ​ ​<p> Operating company DIVE INTO CODE Co., Ltd. </ p>
-    ​ ​<p> © 2015-2018 Copyright DIVE INTO CODE Corp. </ p>
-  ​ ​</footer>
-​ ​</body>
-​ ​</html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Achieve</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/sample.css">
+</head>
+<body>
+  
+  <header>
+    <ul>
+      <li class="left"><a href="#">Achieve</a></li>
+      <li class="left"><a href="#">enquête</a></li>
+      <li class="right"><a href="#">s'inscrire</a></li>
+      <li class="right"><a href="#">login</a></li>
+    </ul>
+  </header>
+  <section class="main-header">
+    <img src="images/achieve.png">
+  </section>
+  <section class="about">
+    <h1>About Achieve</h1>
+    <p>
+      Achieve est une page éducative conçue pour les étudiants.<br>
+      Vous pouvez réussir le devoir HTML en remplissant le formulaire Achieve.
+    </p>
+    <p>
+      En bref, Acheive est une maquette de la première page d'une application de gestion des tâches C'est le cas.<br>
+      C'est un excellent moyen de garder une trace des tâches que les membres de votre équipe accomplissent en ce moment. Cette page explique la fonction de la demande.
+    </p>
+  </section>
+  <section class="function">
+    <h1>Function</h1>
+    <div class="function-images">
+      <div class="function-image">
+        <img src="images/key.png">
+        <p>Fonction de connexion</p>
+      </div>
+      <div class="function-image">
+        <img src="images/mails.png">
+        <p>Envoyer du courrier</p>
+      </div>
+      <div class="function-image">
+        <img src="images/girls.png">
+        <p>Fonction de connexion avec les amis</p>
+      </div>
+      <div class="function-image">
+        <img src="images/comment.png">
+        <p>Fonction de commentaire</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <p>Société de gestion DIVE INTO CODE Co.</p>
+    <p>© 2015-2018 Copyright DIVE INTO CODE Corp.</p>
+  </footer>
+</body>
+</html>
