--- a/sample.html
+++ b/sample.html
@@ -2,13 +2,13 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Achieve</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/sample.css">
 </head>
 <body>
-  
+
   <header>
     <ul>
       <li class="left"><a href="#">Achieve</a></li>
@@ -28,11 +28,12 @@
     </p>
     <p>
       En bref, Acheive est une maquette de la première page d'une application de gestion des tâches C'est le cas.<br>
-      C'est un excellent moyen de garder une trace des tâches que les membres de votre équipe accomplissent en ce moment. Cette page explique la fonction de la demande.
+      C'est un excellent moyen de garder une trace des tâches que les membres de votre équipe accomplissent en ce moment.<br> Cette page explique la fonction de la demande.
     </p>
   </section>
+
   <section class="function">
-    <h1>Function</h1>
+  <h1>Function</h1>
     <div class="function-images">
       <div class="function-image">
         <img src="images/key.png">
@@ -44,11 +45,11 @@
       </div>
       <div class="function-image">
         <img src="images/girls.png">
-        <p>Fonction de connexion avec les amis</p>
+        <p>connexion amis</p>
       </div>
       <div class="function-image">
         <img src="images/comment.png">
-        <p>Fonction de commentaire</p>
+        <p>Fonction commentaire</p>
       </div>
     </div>
   </section>
